--- a/index.html
+++ b/index.html
@@ -2,9 +2,118 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <title>Star Wars</title>
+    <link rel="icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" type="text/css" href="./style/style.css">
 </head>
-<body>
+<body background="img/nightSky.png">
 
+<div class="preloader">
+    <div class="intro">
+        A long time ago in a galaxy far, </br> far away...
+    </div>
+    <div class="inner-body">
+        <img src="img/Star-Wars-Logo.png">
+    </div>
+    <div class="made-by">
+        <div class="inner-text">
+        Made by Aleksander Karakay
+        </div>
+    </div>
+</div>
+
+<div class="header">
+    <img src="img/Star-Wars-Logo.png"/>
+</div>
+
+<ul>
+    <li>
+        <img src="img/luk.png" alt="Luke Skywalker" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check1" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/C3PO.png" alt="C-3PO" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check2" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/R2-D2.png" alt="R2-D2" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check3" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/Darth_Vader.png" alt="Darth Vader" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check4" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/Leia.png" alt="Leia Organa" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check5" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/Owen_Lars.png" alt="Owen Lars" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check6" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/Beru.jpg" alt="Beru Whitesun lars" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check7" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/r5-d4.png" alt="R5-D4" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check8" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/Biggs.png" alt="Biggs Darklighter" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check9" type="checkbox"/> Like</p>
+    </li>
+    <li>
+        <img src="img/obiWan.png" alt="Obi-Wan Kenobi" class="pers-img">
+        <h3 id="named"></h3>
+        <p id="birthYear"></p>
+        <p id="gender"></p>
+        <p id="height"></p>
+        <p><input id="check10" type="checkbox"/> Like </p>
+    </li>
+
+</ul>
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="./libs/bootstrap.js"></script>
+<script src="index.js"></script>
 </body>
 </html>
